# taiji

./: .gitignore  Cargo.toml  README.md
src/: app.rs  grid.rs  line_splitter.rs  main.rs  panel.rs  render.rs  symbol.rs
src/grid/: neighbourhood.rs  solver.rs
src/grid/neighbourhood/: test.rs
src/panel/: test.rs
src/render/: grid.rs
